--- a/askcompany/templates/layout.html
+++ b/askcompany/templates/layout.html
@@ -1,22 +1,36 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <title>{% block title %}Ask Company{% endblock %}</title>
-<style>
-        body {
-            background-color: lightpink;
-        }
-    </style>
-{% block extra_head %}{% endblock %}
-</head>
-<body>
-<h1>Ask Company</h1>
 
-{% block content %}
+
+
+{% block extra_head %}
+
+    <link rel="stylesheet" href="{% static "main.css"%}">
 {% endblock %}
-<hr/>
-&copy; 2018.Ask Company.
-{% block extra_body %}{% endblock %}
-</html>
+
+</head>
+
+
+<body>
+    <h1>Ask Company</h1>
+
+        {% block content %}
+            슈퍼블락
+        {% endblock %}
+    <hr/>
+
+    &copy; 2018.Ask Company.
+
+        {% block extra_body %}
+            <script src="{% static "main.js" %}"></script>
+
+        {% endblock %}
+
 </body>
+</html>
+
