--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -1,7 +1,7 @@
 {% extends "shop/layout.html" %}
 {% block content %}
 
-
+{{ block.super }}
 <form action="" method="GET">
     <input type="text" name="q" value="{{ q }}">
     <input type="submit" value="search">
