--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -1,10 +1,16 @@
 {% extends "layout.html" %}
+{% load static %}
 
-{% block title %}Shop by Ask Company{% endblock %}
+{% block title %}
+    Shop by Ask Company
+{% endblock %}
 
 {% block extra_head %}
-    <style>
+    {{ block.super }}
+    <link rel="stylesheet" href="{% static "shop/shop.css" %}">
 
-    </style>
-    <link rel="stylesheet" href="">
+{% endblock %}
+
+{% block extra_body %}
+    {{ block.super }}
 {% endblock %}
