--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% load static %}
+{% load static fresh_static%}
 
 {% block title %}
     Shop by Ask Company
@@ -7,7 +7,7 @@
 
 {% block extra_head %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static "shop/shop.css" %}">
+    <link rel="stylesheet" href="{% fresh_static "shop/shop.css" %}">
 
 {% endblock %}
 
