djangoask-URL_Reverse

--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -9,7 +9,7 @@
 <ul>
     {% for item in item_list %}
         <li>
-            <a href="/shop/{{ item.id }}">
+            <a href="{{ item.get_absoulte_url }}">
                 {{ item.name }}
             </a>
             (pk = ({{ item.id }}))<br>
