--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -16,8 +16,24 @@
 {% endblock %}
 
 {% block header %}
+
+
+
+
+    {{ request }}
+
     <h1>AskDjango Blog</h1>
-    회원가입 로그인 로그아웃
+
+    {% if user.is_authenticated %}
+        {{ user }}
+        로그아웃
+    {% else %}
+        회원가입
+        <a href="{% url "login" %}?next={{ request.path }}">로그인</a>
+
+    {% endif %}
+
+
     <hr>
 {% endblock %}
 
