--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -16,19 +16,14 @@
 {% endblock %}
 
 {% block header %}
-
-
-
-
     {{ request }}
-
     <h1>
         <a href="{% url 'root' %}">AskDjango Blog</a>
     </h1>
 
     {% if user.is_authenticated %}
         <a href="{% url "profile" %}">{{ user }}</a>
-        로그아웃
+        <a href="{% url "logout" %}?next={{ request.path }}" onclick="return confirm('Are you Sure?');">로그아웃</a>
     {% else %}
         회원가입
         <a href="{% url "login" %}?next={{ request.path }}">로그인</a>
