djangoask-auth_Profile

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,4 +2,6 @@
 
 {% block content %}
     <h2>{{ user }}'s Profile</h2>
+    <h3>BIO</h3>
+    {{ user.profile.bio|default:'empty' }}
 {% endblock %}
