--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,9 +1,19 @@
 {% extends "blog/layout.html" %}
 
 {% block content %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
     <h2>{{ user.username }}'s Profile</h2>
     <h3>Email</h3>
     {{ user.email|default:"" }}
     <h3>BIO</h3>
     {{ user.profile.bio|default:'&dash;' }}
+    <hr>
+    <a href="{% url "password_change" %}">암호 변경하기</a>
 {% endblock %}
